# reactr

./: README.md  pyproject.toml
src/reactr/: __init__.py  reactr.py
tests/: test_reactive_model.py
